Fixed spacing in content path input

--- a/modules/app/src/main/resources/assets/styles/wizard/content-wizard-panel.less
+++ b/modules/app/src/main/resources/assets/styles/wizard/content-wizard-panel.less
@@ -5,12 +5,12 @@
     .path-error {
       color: @admin-level-3;
       display: none;
+      margin-left: 5px;
     }
 
     .wizard-header-bottom-row {
       input {
         display: inline-block;
-        padding-left: 5px;
       }
     }
 
